# app.js
@@ -2,9 +2,9 @@ import express from 'express';
 import cors from 'cors';
 import swaggerUi from 'swagger-ui-express';
 import register from './routes/register.js';
+import login from './routes/login.js';
 
 import swaggerDefinition from './swagger.json' assert { type: 'json' };
-
 
 
 const app = express();
@@ -18,6 +18,7 @@ const baseUrl = '/mytodo/v1';
 
 // Mount routes
 app.use(baseUrl + '/register', register);
+app.use(baseUrl + '/login', login);
 
 // Mount Swagger
 app.use(
